--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,51 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #1c212d; /* Couleur de fond */
+  color: #f1f3f2;
+}
+
+h1, h2, h3 {
+  font-family: 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 2rem; /* Taille de police pour h1 */
+}
+
+h2 {
+  font-size: 1.5rem; /* Taille de police pour h2 */
+}
+
+h3 {
+  font-size: 1.5rem; /* Taille de police pour h3 */
+}
+
+/* Style de base pour les paragraphes */
+p {
+  font-family: 'Arial', sans-serif;
+  font-size: 1rem; /* Taille de police pour les paragraphes */
+  line-height: 1.5; /* Hauteur de ligne pour les paragraphes */
+  text-align: justify;
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
+@keyframes ping {
+  0% {
+    transform: scale(0.1);
+    opacity: 0.5;
+  }
+  50% {
+    transform: scale(1.2);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scale(1.3);
+    opacity: 0;
+  }
+}
+.slow-ping {
+  animation: ping 2s cubic-bezier(0, 0, 0.2, 1) infinite;
 }
